# friendly-hackathon-agentic-ai

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
data/: sample_data.json
src/: __init__.py  agent.py  data_loader.py  examples.py
