[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proactive-risk-agent"
version = "0.1.0"
description = "Agentic AI agent for proactive risk notification in cyber insurance"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "ollama>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
